[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoplotlib"
version = "0.1.0"
authors = [
  { name="rdnfn", email="info@arduin.io" },
]
description = "Single-line plots from language prompt in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "langchain",
]

[project.urls]
"Homepage" = "https://github.com/rdnfn/autoplotlib"
"Bug Tracker" = "https://github.com/rdnfn/autoplotlib/issues"

[project.optional-dependencies]
dev = ["pytest"]